logo alignment fix on mobile - 2

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -119,7 +119,8 @@ header {
 }
 
 /* 📱 Mobile Navbar */
-.st-key-navbar-mobile-container .stHorizontalBlock {
+.st-key-navbar-mobile-container .stHorizontalBlock,
+ .st-key-navbar-mobile-container .stVerticalBlock{
   flex-flow:nowrap !important;
   padding: 0rem !important;
   margin:0rem !important;
@@ -127,14 +128,7 @@ header {
   max-height: 5rem !important;
 }
 
-/* 🖼️ Logo & Popover */
-button[data-testid="stPopoverButton"] {
-  background: rgba(247, 245, 245, 0.85) !important;
-  border-radius: 4px;
-  border: 1px solid white;
-}
-div[data-testid="stPopoverBody"] {
-background: var(--color-bg-page);}
+
 
 .st-key-logo_mobile,
 .st-key-logo_mobile img {
@@ -151,6 +145,16 @@ button[data-testid="stPopoverButton"] {
   max-width: 50px;
   flex-shrink: 1;
 
+}
+/* 🖼️ Logo & Popover */
+button[data-testid="stPopoverButton"] {
+  background: rgba(247, 245, 245, 0.85) !important;
+  border-radius: 4px;
+  border: 1px solid white;
+}
+div[data-testid="stPopoverBody"],
+div[data-testid="stPopoverBody"] stVerticalBlock {
+    background: var(--color-bg-page);
 }
 
 /* 📄 Body Container */
